--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div  fxLayoutAlign="center center" style="height: 250px;" fxLayoutGap="50px">
-<h1 *ngIf="!loggedIn">Welcome to chatting and voting app, please sign in with Google Account</h1>
+<h1 *ngIf="!loggedIn">Welcome to Planning poker, please sign in with Google Account</h1>
 
 <button mat-raised-button color="primary" *ngIf="loggedIn" routerLink="/chat">
   <mat-icon>chat</mat-icon>
   <span class="nav-list-caption">Chats</span></button>
-<button mat-raised-button color="primary" *ngIf="loggedIn" routerLink="/voting">
+<button mat-raised-button color="primary" *ngIf="loggedIn" routerLink="/poker">
   <mat-icon>how_to_vote</mat-icon>
-  <span class="nav-list-caption">Voting</span></button>
+  <span class="nav-list-caption">Planning poker</span></button>
 </div>
