--- a/src/app/poker-list/poker-list.component.html
+++ b/src/app/poker-list/poker-list.component.html
@@ -18,7 +18,7 @@
     </ng-container>
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-      <mat-cell *matCellDef="let element"><a routerLink="/voting/{{element.id}}"> <button mat-raised-button>Enter</button> </a> </mat-cell>
+      <mat-cell *matCellDef="let element"><a routerLink="/poker/{{element.id}}"> <button mat-raised-button>Enter</button> </a> </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
@@ -28,10 +28,9 @@
   <div>
     <form #f="ngForm" (ngSubmit)="onSubmit(f)" fxLayoutGap="10px" fxLayout="row" fxLayoutAlign="center center">
       <mat-form-field>
-        <input ngModel name="voting" type="text" matInput placeholder="Voting name" required #votingInput="ngModel">
-        <mat-error *ngIf="votingInput.hasError('required')">Voting name must not be empty</mat-error>
+        <input ngModel name="poker" type="text" matInput placeholder="Poker name" required #pokerInput="ngModel">
+        <mat-error *ngIf="pokerInput.hasError('required')">Poker name must not be empty</mat-error>
       </mat-form-field>
-      <button [disabled]="f.invalid" type="submit" mat-raised-button color="primary">Create Voting</button>
+      <button [disabled]="f.invalid" type="submit" mat-raised-button color="primary">Create Planning poker</button>
     </form>
   </div>
-  
